# advent-of-code-2023

./: .env-template  .pdm-python  README.md  pyproject.toml
src/: aocd.pyi
src/aoc23/: util.py
src/aoc23/d02/: __main__.py
src/aoc23/d03/: __main__.py
src/aoc23/d04/: __main__.py
src/aoc23/d1/: __main__.py
