[project]
name = "aoc23"
version = "0.0.1"
description = ""
authors = [
    {name = "Tim Martin", email = "tim@timmart.in"},
]
dependencies = [
    "advent-of-code-data>=2.0.1",
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.1.6",
    "black>=23.11.0",
]
